--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-virtualized": "^9.22.3",
+    "react-virtualized": "github:rhojn/react-virtualized#v9.22.3-bump-react-1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
