--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Setup git
+        run: git config --global user.email "rhojeno8@gmail.com" && git config --global user.name "Rhojen Ocenar"
+        
      # Runs a single command using the runners shell
       - name: Install packages
         run: yarn install
