--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build-react-virtualized": "cd ./node_modules/react-virtualized; yarn install; yarn build",
-    "build": "npm run build-react-virtualized; react-scripts build",
+    "prebuild": "cd ./node_modules/react-virtualized; yarn install; yarn build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
