--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-virtualized": "github:rhojn/react-virtualized#v9.22.3-bump-react-5",
+    "react-virtualized": "github:rhojn/react-virtualized#v9.22.3-bump-react-6",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
@@ -24,11 +24,14 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "husky": "^5.1.3"
+    "rimraf": "^3.0.2"
   },
   "scripts": {
+    "clean": "yarn run clean:build && yarn run clean:dist",
+    "clean:build": "rimraf build",
+    "clean:dist": "rimraf dist",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn run clean && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
